--- a/react-revision/package.json
+++ b/react-revision/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.6",
     "react": "^19.0.0",
+    "react-devtools": "^6.1.2",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
